[gd_scene load_steps=14 format=4 uid="uid://cwrqk21prcrn7"]

[ext_resource type="Script" uid="uid://dkenf2aknhk7r" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://b6jnkm7kk6mgc" path="res://assets/grass-earth-64.png" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://bcttwnyn6ytsx" path="res://scripts/game_manager.gd" id="3_lnu2h"]
[ext_resource type="Script" uid="uid://eg5j8f3fioi" path="res://scripts/moomoo.gd" id="4_iywne"]
[ext_resource type="Texture2D" uid="uid://6fmcewqrxu2g" path="res://assets/moomoo.png" id="4_lbhrr"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_lnu2h"]
vertices = PackedVector2Array(32, 32, -32, 32, -32, -32, 32, -32)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_lbhrr"]
vertices = PackedVector2Array(32, 32, -32, 32, -32, -32, 32, -32)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_iywne"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yqjtg"]
texture = ExtResource("1_uwrxv")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
1:0/0 = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
2:0/0 = 0
2:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
3:0/0 = 0
3:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
0:1/0 = 0
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
1:1/0 = 0
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
2:1/0 = 0
2:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_iywne")
3:1/0 = 0
3:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
0:2/0 = 0
0:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
1:2/0 = 0
1:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
2:2/0 = 0
2:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
3:2/0 = 0
3:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
0:3/0 = 0
0:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lbhrr")
1:3/0 = 0
1:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
2:3/0 = 0
2:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")
3:3/0 = 0
3:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lnu2h")

[sub_resource type="TileSet" id="TileSet_lnu2h"]
tile_size = Vector2i(64, 64)
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_yqjtg")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_p57ef"]
vertices = PackedVector2Array(1729.05, 1107.08, -391.844, 1125.9, -369.141, -416.047, 1736.94, -428.93)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-379, -426, 1747, -439, 1739, 1117, -402, 1136)])

[sub_resource type="FontFile" id="FontFile_yqjtg"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/1/0/ascent = 0.0
cache/0/1/0/descent = 0.0
cache/0/1/0/underline_position = 0.0
cache/0/1/0/underline_thickness = 0.0
cache/0/1/0/scale = 1.0
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/13/0/ascent = 0.0
cache/0/13/0/descent = 0.0
cache/0/13/0/underline_position = 0.0
cache/0/13/0/underline_thickness = 0.0
cache/0/13/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iywne"]
radius = 22.0

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_lbhrr")

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("3_lnu2h")

[node name="Terrain" type="TileMapLayer" parent="."]
position = Vector2(-27, 0)
tile_map_data = PackedByteArray("AAD5/xEAAAAAAAMAAAD5/xIAAAAAAAMAAAD6//r/AAAAAAMAAAD6//v/AAAAAAMAAAD6//z/AAAAAAMAAAD6//3/AAAAAAMAAAD6//7/AAAAAAMAAAD6////AAAAAAMAAAD6/wAAAAAAAAMAAAD6/wEAAAAAAAMAAAD6/wIAAAAAAAMAAAD6/wMAAAAAAAMAAAD6/wQAAAAAAAMAAAD6/wUAAAAAAAMAAAD6/wYAAAAAAAMAAAD6/wcAAAAAAAMAAAD6/wgAAAAAAAMAAAD6/wkAAAAAAAMAAAD6/woAAAAAAAMAAAD6/wsAAAAAAAMAAAD6/wwAAAAAAAMAAAD6/w0AAAAAAAMAAAD6/w4AAAAAAAMAAAD6/w8AAAAAAAMAAAD6/xAAAAAAAAMAAAD6/xEAAAAAAAMAAAD7//r/AAAAAAMAAAD7//v/AAAAAAMAAAD7//z/AAAAAAMAAAD7//3/AAAAAAMAAAD7//7/AAAAAAMAAAD7////AAAAAAMAAAD7/wAAAAAAAAMAAAD7/wEAAAAAAAMAAAD7/wIAAAAAAAMAAAD7/wMAAAAAAAMAAAD7/wQAAAACAAEAAAD7/wUAAAACAAEAAAD7/wYAAAAAAAMAAAD7/wcAAAAAAAMAAAD7/wgAAAAAAAMAAAD7/wkAAAAAAAMAAAD7/woAAAAAAAMAAAD7/wsAAAAAAAMAAAD7/wwAAAAAAAMAAAD7/w0AAAAAAAMAAAD7/w4AAAAAAAMAAAD7/w8AAAAAAAMAAAD7/xAAAAAAAAMAAAD7/xEAAAAAAAMAAAD8//r/AAAAAAMAAAD8//v/AAAAAAMAAAD8//z/AAAAAAMAAAD8//3/AAAAAAMAAAD8//7/AAAAAAMAAAD8////AAAAAAMAAAD8/wAAAAAAAAMAAAD8/wEAAAAAAAMAAAD8/wIAAAAAAAMAAAD8/wMAAAAAAAMAAAD8/wQAAAACAAEAAAD8/wUAAAACAAEAAAD8/wYAAAAAAAMAAAD8/wcAAAAAAAMAAAD8/wgAAAAAAAMAAAD8/wkAAAAAAAMAAAD8/woAAAAAAAMAAAD8/wsAAAAAAAMAAAD8/wwAAAAAAAMAAAD8/w0AAAAAAAMAAAD8/w4AAAAAAAMAAAD8/w8AAAAAAAMAAAD8/xAAAAAAAAMAAAD8/xEAAAAAAAMAAAD9//r/AAAAAAMAAAD9//v/AAAAAAMAAAD9//z/AAAAAAMAAAD9//3/AAAAAAMAAAD9//7/AAAAAAMAAAD9////AAAAAAMAAAD9/wAAAAAAAAMAAAD9/wEAAAAAAAMAAAD9/wIAAAAAAAMAAAD9/wMAAAAAAAMAAAD9/wQAAAACAAEAAAD9/wUAAAACAAEAAAD9/wYAAAAAAAMAAAD9/wcAAAAAAAMAAAD9/wgAAAAAAAMAAAD9/wkAAAAAAAMAAAD9/woAAAAAAAMAAAD9/wsAAAAAAAMAAAD9/wwAAAAAAAMAAAD9/w0AAAAAAAMAAAD9/w4AAAAAAAMAAAD9/w8AAAAAAAMAAAD9/xAAAAAAAAMAAAD9/xEAAAAAAAMAAAD+//r/AAAAAAMAAAD+//v/AAAAAAMAAAD+//z/AAAAAAMAAAD+//3/AAAAAAMAAAD+//7/AAAAAAMAAAD+////AAAAAAMAAAD+/wAAAAAAAAMAAAD+/wEAAAAAAAMAAAD+/wIAAAAAAAMAAAD+/wMAAAAAAAMAAAD+/wQAAAACAAEAAAD+/wUAAAACAAEAAAD+/wYAAAAAAAMAAAD+/wcAAAAAAAMAAAD+/wgAAAAAAAMAAAD+/wkAAAAAAAMAAAD+/woAAAAAAAMAAAD+/wsAAAAAAAMAAAD+/wwAAAAAAAMAAAD+/w0AAAAAAAMAAAD+/w4AAAAAAAMAAAD+/w8AAAAAAAMAAAD+/xAAAAAAAAMAAAD+/xEAAAAAAAMAAAD///r/AAAAAAMAAAD///v/AAAAAAMAAAD///z/AAAAAAMAAAD///3/AAAAAAMAAAD///7/AAAAAAMAAAD/////AAAAAAMAAAD//wAAAAAAAAMAAAD//wEAAAAAAAMAAAD//wIAAAAAAAMAAAD//wMAAAAAAAMAAAD//wQAAAACAAEAAAD//wUAAAACAAEAAAD//wYAAAAAAAMAAAD//wcAAAAAAAMAAAD//wgAAAAAAAMAAAD//wkAAAAAAAMAAAD//woAAAAAAAMAAAD//wsAAAAAAAMAAAD//wwAAAAAAAMAAAD//w0AAAAAAAMAAAD//w4AAAAAAAMAAAD//w8AAAAAAAMAAAD//xAAAAAAAAMAAAD//xEAAAAAAAMAAAAAAPr/AAAAAAMAAAAAAPv/AAAAAAMAAAAAAPz/AAAAAAMAAAAAAP3/AAAAAAMAAAAAAP7/AAAAAAMAAAAAAP//AAAAAAMAAAAAAAAAAAAAAAMAAAAAAAEAAAAAAAMAAAAAAAIAAAAAAAMAAAAAAAMAAAAAAAMAAAAAAAQAAAACAAEAAAAAAAUAAAACAAEAAAAAAAYAAAAAAAMAAAAAAAcAAAAAAAMAAAAAAAgAAAAAAAMAAAAAAAkAAAAAAAMAAAAAAAoAAAAAAAMAAAAAAAsAAAAAAAMAAAAAAAwAAAAAAAMAAAAAAA0AAAAAAAMAAAAAAA4AAAAAAAMAAAAAAA8AAAAAAAMAAAAAABAAAAAAAAMAAAAAABEAAAAAAAMAAAABAPr/AAAAAAMAAAABAPv/AAAAAAMAAAABAPz/AAAAAAMAAAABAP3/AAAAAAMAAAABAP7/AAAAAAMAAAABAP//AAAAAAMAAAABAAAAAAAAAAMAAAABAAEAAAAAAAMAAAABAAIAAAAAAAMAAAABAAMAAAAAAAMAAAABAAQAAAACAAEAAAABAAUAAAACAAEAAAABAAYAAAAAAAMAAAABAAcAAAAAAAMAAAABAAgAAAAAAAMAAAABAAkAAAAAAAMAAAABAAoAAAAAAAMAAAABAAsAAAAAAAMAAAABAAwAAAAAAAMAAAABAA0AAAAAAAMAAAABAA4AAAAAAAMAAAABAA8AAAAAAAMAAAABABAAAAAAAAMAAAABABEAAAAAAAMAAAACAPr/AAAAAAMAAAACAPv/AAAAAAMAAAACAPz/AAAAAAMAAAACAP3/AAAAAAMAAAACAP7/AAAAAAMAAAACAP//AAAAAAMAAAACAAAAAAAAAAMAAAACAAEAAAAAAAMAAAACAAIAAAAAAAMAAAACAAMAAAAAAAMAAAACAAQAAAACAAEAAAACAAUAAAACAAEAAAACAAYAAAAAAAMAAAACAAcAAAAAAAMAAAACAAgAAAAAAAMAAAACAAkAAAAAAAMAAAACAAoAAAAAAAMAAAACAAsAAAAAAAMAAAACAAwAAAAAAAMAAAACAA0AAAAAAAMAAAACAA4AAAAAAAMAAAACAA8AAAAAAAMAAAACABAAAAAAAAMAAAACABEAAAAAAAMAAAADAPr/AAAAAAMAAAADAPv/AAAAAAMAAAADAPz/AAAAAAMAAAADAP3/AAACAAEAAAADAP7/AAACAAEAAAADAP//AAACAAEAAAADAAAAAAAAAAMAAAADAAEAAAAAAAMAAAADAAIAAAAAAAMAAAADAAMAAAAAAAMAAAADAAQAAAACAAEAAAADAAUAAAACAAEAAAADAAYAAAAAAAMAAAADAAcAAAAAAAMAAAADAAgAAAAAAAMAAAADAAkAAAAAAAMAAAADAAoAAAAAAAMAAAADAAsAAAAAAAMAAAADAAwAAAAAAAMAAAADAA0AAAAAAAMAAAADAA4AAAAAAAMAAAADAA8AAAAAAAMAAAADABAAAAAAAAMAAAADABEAAAAAAAMAAAAEAPr/AAAAAAMAAAAEAPv/AAAAAAMAAAAEAPz/AAAAAAMAAAAEAP3/AAACAAEAAAAEAP7/AAAAAAMAAAAEAP//AAACAAEAAAAEAAAAAAAAAAMAAAAEAAEAAAAAAAMAAAAEAAIAAAAAAAMAAAAEAAMAAAAAAAMAAAAEAAQAAAACAAEAAAAEAAUAAAACAAEAAAAEAAYAAAAAAAMAAAAEAAcAAAAAAAMAAAAEAAgAAAAAAAMAAAAEAAkAAAAAAAMAAAAEAAoAAAAAAAMAAAAEAAsAAAAAAAMAAAAEAAwAAAAAAAMAAAAEAA0AAAAAAAMAAAAEAA4AAAAAAAMAAAAEAA8AAAAAAAMAAAAEABAAAAAAAAMAAAAEABEAAAAAAAMAAAAFAPr/AAAAAAMAAAAFAPv/AAAAAAMAAAAFAPz/AAAAAAMAAAAFAP3/AAACAAEAAAAFAP7/AAAAAAMAAAAFAP//AAAAAAMAAAAFAAAAAAAAAAMAAAAFAAEAAAAAAAMAAAAFAAIAAAAAAAMAAAAFAAMAAAAAAAMAAAAFAAQAAAACAAEAAAAFAAUAAAACAAEAAAAFAAYAAAAAAAMAAAAFAAcAAAAAAAMAAAAFAAgAAAAAAAMAAAAFAAkAAAAAAAMAAAAFAAoAAAAAAAMAAAAFAAsAAAAAAAMAAAAFAAwAAAAAAAMAAAAFAA0AAAAAAAMAAAAFAA4AAAAAAAMAAAAFAA8AAAAAAAMAAAAFABAAAAAAAAMAAAAFABEAAAAAAAMAAAAGAPr/AAAAAAMAAAAGAPv/AAAAAAMAAAAGAPz/AAAAAAMAAAAGAP3/AAAAAAMAAAAGAP7/AAAAAAMAAAAGAP//AAAAAAMAAAAGAAAAAAAAAAMAAAAGAAEAAAAAAAMAAAAGAAIAAAAAAAMAAAAGAAMAAAAAAAMAAAAGAAQAAAACAAEAAAAGAAUAAAACAAEAAAAGAAYAAAAAAAMAAAAGAAcAAAAAAAMAAAAGAAgAAAAAAAMAAAAGAAkAAAAAAAMAAAAGAAoAAAAAAAMAAAAGAAsAAAAAAAMAAAAGAAwAAAAAAAMAAAAGAA0AAAAAAAMAAAAGAA4AAAAAAAMAAAAGAA8AAAAAAAMAAAAGABAAAAAAAAMAAAAGABEAAAAAAAMAAAAHAPr/AAAAAAMAAAAHAPv/AAAAAAMAAAAHAPz/AAAAAAMAAAAHAP3/AAAAAAMAAAAHAP7/AAAAAAMAAAAHAP//AAAAAAMAAAAHAAAAAAAAAAMAAAAHAAEAAAAAAAMAAAAHAAIAAAAAAAMAAAAHAAMAAAAAAAMAAAAHAAQAAAAAAAMAAAAHAAUAAAAAAAMAAAAHAAYAAAAAAAMAAAAHAAcAAAAAAAMAAAAHAAgAAAAAAAMAAAAHAAkAAAAAAAMAAAAHAAoAAAAAAAMAAAAHAAsAAAAAAAMAAAAHAAwAAAAAAAMAAAAHAA0AAAAAAAMAAAAHAA4AAAAAAAMAAAAHAA8AAAAAAAMAAAAHABAAAAAAAAMAAAAHABEAAAAAAAMAAAAIAPr/AAAAAAMAAAAIAPv/AAAAAAMAAAAIAPz/AAAAAAMAAAAIAP3/AAACAAEAAAAIAP7/AAACAAEAAAAIAP//AAACAAEAAAAIAAAAAAACAAEAAAAIAAEAAAACAAEAAAAIAAIAAAACAAEAAAAIAAMAAAAAAAMAAAAIAAQAAAAAAAMAAAAIAAUAAAAAAAMAAAAIAAYAAAAAAAMAAAAIAAcAAAACAAEAAAAIAAgAAAACAAEAAAAIAAkAAAACAAEAAAAIAAoAAAACAAEAAAAIAAsAAAACAAEAAAAIAAwAAAACAAEAAAAIAA0AAAACAAEAAAAIAA4AAAAAAAMAAAAIAA8AAAAAAAMAAAAIABAAAAAAAAMAAAAIABEAAAAAAAMAAAAJAPr/AAAAAAMAAAAJAPv/AAAAAAMAAAAJAPz/AAAAAAMAAAAJAP3/AAACAAEAAAAJAP7/AAACAAEAAAAJAP//AAACAAEAAAAJAAAAAAACAAEAAAAJAAEAAAACAAEAAAAJAAIAAAACAAEAAAAJAAMAAAAAAAMAAAAJAAQAAAAAAAMAAAAJAAUAAAAAAAMAAAAJAAYAAAAAAAMAAAAJAAcAAAACAAEAAAAJAAgAAAACAAEAAAAJAAkAAAACAAEAAAAJAAoAAAACAAEAAAAJAAsAAAACAAEAAAAJAAwAAAACAAEAAAAJAA0AAAACAAEAAAAJAA4AAAAAAAMAAAAJAA8AAAAAAAMAAAAJABAAAAAAAAMAAAAJABEAAAAAAAMAAAAKAPr/AAAAAAMAAAAKAPv/AAAAAAMAAAAKAPz/AAAAAAMAAAAKAP3/AAAAAAMAAAAKAP7/AAAAAAMAAAAKAP//AAAAAAMAAAAKAAAAAAAAAAMAAAAKAAEAAAAAAAMAAAAKAAIAAAAAAAMAAAAKAAMAAAAAAAMAAAAKAAQAAAAAAAMAAAAKAAUAAAAAAAMAAAAKAAYAAAAAAAMAAAAKAAcAAAAAAAMAAAAKAAgAAAAAAAMAAAAKAAkAAAAAAAMAAAAKAAoAAAAAAAMAAAAKAAsAAAAAAAMAAAAKAAwAAAAAAAMAAAAKAA0AAAAAAAMAAAAKAA4AAAAAAAMAAAAKAA8AAAAAAAMAAAAKABAAAAAAAAMAAAAKABEAAAAAAAMAAAALAPr/AAAAAAMAAAALAPv/AAAAAAMAAAALAPz/AAAAAAMAAAALAP3/AAAAAAMAAAALAP7/AAAAAAMAAAALAP//AAAAAAMAAAALAAAAAAAAAAMAAAALAAEAAAAAAAMAAAALAAIAAAAAAAMAAAALAAMAAAAAAAMAAAALAAQAAAACAAEAAAALAAUAAAACAAEAAAALAAYAAAAAAAMAAAALAAcAAAAAAAMAAAALAAgAAAAAAAMAAAALAAkAAAAAAAMAAAALAAoAAAAAAAMAAAALAAsAAAAAAAMAAAALAAwAAAAAAAMAAAALAA0AAAAAAAMAAAALAA4AAAAAAAMAAAALAA8AAAAAAAMAAAALABAAAAAAAAMAAAALABEAAAAAAAMAAAAMAPr/AAAAAAMAAAAMAPv/AAAAAAMAAAAMAPz/AAAAAAMAAAAMAP3/AAAAAAMAAAAMAP7/AAAAAAMAAAAMAP//AAAAAAMAAAAMAAAAAAAAAAMAAAAMAAEAAAAAAAMAAAAMAAIAAAAAAAMAAAAMAAMAAAAAAAMAAAAMAAQAAAACAAEAAAAMAAUAAAACAAEAAAAMAAYAAAAAAAMAAAAMAAcAAAAAAAMAAAAMAAgAAAAAAAMAAAAMAAkAAAAAAAMAAAAMAAoAAAAAAAMAAAAMAAsAAAAAAAMAAAAMAAwAAAAAAAMAAAAMAA0AAAAAAAMAAAAMAA4AAAAAAAMAAAAMAA8AAAAAAAMAAAAMABAAAAAAAAMAAAAMABEAAAAAAAMAAAANAPr/AAAAAAMAAAANAPv/AAAAAAMAAAANAPz/AAAAAAMAAAANAP3/AAAAAAMAAAANAP7/AAAAAAMAAAANAP//AAAAAAMAAAANAAAAAAAAAAMAAAANAAEAAAAAAAMAAAANAAIAAAAAAAMAAAANAAMAAAAAAAMAAAANAAQAAAACAAEAAAANAAUAAAACAAEAAAANAAYAAAAAAAMAAAANAAcAAAAAAAMAAAANAAgAAAAAAAMAAAANAAkAAAAAAAMAAAANAAoAAAAAAAMAAAANAAsAAAAAAAMAAAANAAwAAAAAAAMAAAANAA0AAAAAAAMAAAANAA4AAAAAAAMAAAANAA8AAAAAAAMAAAANABAAAAAAAAMAAAANABEAAAAAAAMAAAAOAPr/AAAAAAMAAAAOAPv/AAAAAAMAAAAOAPz/AAAAAAMAAAAOAP3/AAAAAAMAAAAOAP7/AAAAAAMAAAAOAP//AAAAAAMAAAAOAAAAAAAAAAMAAAAOAAEAAAAAAAMAAAAOAAIAAAAAAAMAAAAOAAMAAAAAAAMAAAAOAAQAAAACAAEAAAAOAAUAAAACAAEAAAAOAAYAAAAAAAMAAAAOAAcAAAAAAAMAAAAOAAgAAAAAAAMAAAAOAAkAAAAAAAMAAAAOAAoAAAAAAAMAAAAOAAsAAAAAAAMAAAAOAAwAAAAAAAMAAAAOAA0AAAAAAAMAAAAOAA4AAAAAAAMAAAAOAA8AAAAAAAMAAAAOABAAAAAAAAMAAAAOABEAAAAAAAMAAAAPAPr/AAAAAAMAAAAPAPv/AAAAAAMAAAAPAPz/AAAAAAMAAAAPAP3/AAAAAAMAAAAPAP7/AAAAAAMAAAAPAP//AAAAAAMAAAAPAAAAAAAAAAMAAAAPAAEAAAAAAAMAAAAPAAIAAAAAAAMAAAAPAAMAAAAAAAMAAAAPAAQAAAACAAEAAAAPAAUAAAACAAEAAAAPAAYAAAAAAAMAAAAPAAcAAAAAAAMAAAAPAAgAAAAAAAMAAAAPAAkAAAAAAAMAAAAPAAoAAAAAAAMAAAAPAAsAAAAAAAMAAAAPAAwAAAAAAAMAAAAPAA0AAAAAAAMAAAAPAA4AAAAAAAMAAAAPAA8AAAAAAAMAAAAPABAAAAAAAAMAAAAPABEAAAAAAAMAAAAQAPr/AAAAAAMAAAAQAPv/AAAAAAMAAAAQAPz/AAAAAAMAAAAQAP3/AAAAAAMAAAAQAP7/AAAAAAMAAAAQAP//AAAAAAMAAAAQAAAAAAAAAAMAAAAQAAEAAAAAAAMAAAAQAAIAAAAAAAMAAAAQAAMAAAAAAAMAAAAQAAQAAAACAAEAAAAQAAUAAAACAAEAAAAQAAYAAAAAAAMAAAAQAAcAAAAAAAMAAAAQAAgAAAAAAAMAAAAQAAkAAAAAAAMAAAAQAAoAAAAAAAMAAAAQAAsAAAAAAAMAAAAQAAwAAAAAAAMAAAAQAA0AAAAAAAMAAAAQAA4AAAAAAAMAAAAQAA8AAAAAAAMAAAAQABAAAAAAAAMAAAAQABEAAAAAAAMAAAARAPr/AAAAAAMAAAARAPv/AAAAAAMAAAARAPz/AAAAAAMAAAARAP3/AAAAAAMAAAARAP7/AAAAAAMAAAARAP//AAAAAAMAAAARAAAAAAAAAAMAAAARAAEAAAAAAAMAAAARAAIAAAAAAAMAAAARAAMAAAAAAAMAAAARAAQAAAACAAEAAAARAAUAAAACAAEAAAARAAYAAAAAAAMAAAARAAcAAAAAAAMAAAARAAgAAAAAAAMAAAARAAkAAAAAAAMAAAARAAoAAAAAAAMAAAARAAsAAAAAAAMAAAARAAwAAAAAAAMAAAARAA0AAAAAAAMAAAARAA4AAAAAAAMAAAARAA8AAAAAAAMAAAARABAAAAAAAAMAAAARABEAAAAAAAMAAAASAPr/AAAAAAMAAAASAPv/AAAAAAMAAAASAPz/AAAAAAMAAAASAP3/AAAAAAMAAAASAP7/AAAAAAMAAAASAP//AAAAAAMAAAASAAAAAAAAAAMAAAASAAEAAAAAAAMAAAASAAIAAAAAAAMAAAASAAMAAAAAAAMAAAASAAQAAAACAAEAAAASAAUAAAACAAEAAAASAAYAAAAAAAMAAAASAAcAAAAAAAMAAAASAAgAAAAAAAMAAAASAAkAAAAAAAMAAAASAAoAAAAAAAMAAAASAAsAAAAAAAMAAAASAAwAAAAAAAMAAAASAA0AAAAAAAMAAAASAA4AAAAAAAMAAAASAA8AAAAAAAMAAAASABAAAAAAAAMAAAASABEAAAAAAAMAAAATAPr/AAAAAAMAAAATAPv/AAAAAAMAAAATAPz/AAAAAAMAAAATAP3/AAAAAAMAAAATAP7/AAAAAAMAAAATAP//AAAAAAMAAAATAAAAAAAAAAMAAAATAAEAAAAAAAMAAAATAAIAAAAAAAMAAAATAAMAAAAAAAMAAAATAAQAAAACAAEAAAATAAUAAAACAAEAAAATAAYAAAAAAAMAAAATAAcAAAAAAAMAAAATAAgAAAAAAAMAAAATAAkAAAAAAAMAAAATAAoAAAAAAAMAAAATAAsAAAAAAAMAAAATAAwAAAAAAAMAAAATAA0AAAAAAAMAAAATAA4AAAAAAAMAAAATAA8AAAAAAAMAAAATABAAAAAAAAMAAAATABEAAAAAAAMAAAAUAPr/AAAAAAMAAAAUAPv/AAAAAAMAAAAUAPz/AAAAAAMAAAAUAP3/AAAAAAMAAAAUAP7/AAAAAAMAAAAUAP//AAAAAAMAAAAUAAAAAAAAAAMAAAAUAAEAAAAAAAMAAAAUAAIAAAAAAAMAAAAUAAMAAAAAAAMAAAAUAAQAAAACAAEAAAAUAAUAAAACAAEAAAAUAAYAAAAAAAMAAAAUAAcAAAAAAAMAAAAUAAgAAAAAAAMAAAAUAAkAAAAAAAMAAAAUAAoAAAAAAAMAAAAUAAsAAAAAAAMAAAAUAAwAAAAAAAMAAAAUAA0AAAAAAAMAAAAUAA4AAAAAAAMAAAAUAA8AAAAAAAMAAAAUABAAAAAAAAMAAAAUABEAAAAAAAMAAAAVAPr/AAAAAAMAAAAVAPv/AAAAAAMAAAAVAPz/AAAAAAMAAAAVAP3/AAAAAAMAAAAVAP7/AAAAAAMAAAAVAP//AAAAAAMAAAAVAAAAAAAAAAMAAAAVAAEAAAAAAAMAAAAVAAIAAAAAAAMAAAAVAAMAAAAAAAMAAAAVAAQAAAACAAEAAAAVAAUAAAACAAEAAAAVAAYAAAAAAAMAAAAVAAcAAAAAAAMAAAAVAAgAAAAAAAMAAAAVAAkAAAAAAAMAAAAVAAoAAAAAAAMAAAAVAAsAAAAAAAMAAAAVAAwAAAAAAAMAAAAVAA0AAAAAAAMAAAAVAA4AAAAAAAMAAAAVAA8AAAAAAAMAAAAVABAAAAAAAAMAAAAVABEAAAAAAAMAAAAWAPr/AAAAAAMAAAAWAPv/AAAAAAMAAAAWAPz/AAAAAAMAAAAWAP3/AAAAAAMAAAAWAP7/AAAAAAMAAAAWAP//AAAAAAMAAAAWAAAAAAAAAAMAAAAWAAEAAAAAAAMAAAAWAAIAAAAAAAMAAAAWAAMAAAAAAAMAAAAWAAQAAAACAAEAAAAWAAUAAAACAAEAAAAWAAYAAAAAAAMAAAAWAAcAAAAAAAMAAAAWAAgAAAAAAAMAAAAWAAkAAAAAAAMAAAAWAAoAAAAAAAMAAAAWAAsAAAAAAAMAAAAWAAwAAAAAAAMAAAAWAA0AAAAAAAMAAAAWAA4AAAAAAAMAAAAWAA8AAAAAAAMAAAAWABAAAAAAAAMAAAAWABEAAAAAAAMAAAAXAPr/AAAAAAMAAAAXAPv/AAAAAAMAAAAXAPz/AAAAAAMAAAAXAP3/AAAAAAMAAAAXAP7/AAAAAAMAAAAXAP//AAAAAAMAAAAXAAAAAAAAAAMAAAAXAAEAAAAAAAMAAAAXAAIAAAAAAAMAAAAXAAMAAAAAAAMAAAAXAAQAAAACAAEAAAAXAAUAAAACAAEAAAAXAAYAAAAAAAMAAAAXAAcAAAAAAAMAAAAXAAgAAAAAAAMAAAAXAAkAAAAAAAMAAAAXAAoAAAAAAAMAAAAXAAsAAAAAAAMAAAAXAAwAAAAAAAMAAAAXAA0AAAAAAAMAAAAXAA4AAAAAAAMAAAAXAA8AAAAAAAMAAAAXABAAAAAAAAMAAAAXABEAAAAAAAMAAAAYAPr/AAAAAAMAAAAYAPv/AAAAAAMAAAAYAPz/AAAAAAMAAAAYAP3/AAAAAAMAAAAYAP7/AAAAAAMAAAAYAP//AAAAAAMAAAAYAAAAAAAAAAMAAAAYAAEAAAAAAAMAAAAYAAIAAAAAAAMAAAAYAAMAAAAAAAMAAAAYAAQAAAACAAEAAAAYAAUAAAACAAEAAAAYAAYAAAAAAAMAAAAYAAcAAAAAAAMAAAAYAAgAAAAAAAMAAAAYAAkAAAAAAAMAAAAYAAoAAAAAAAMAAAAYAAsAAAAAAAMAAAAYAAwAAAAAAAMAAAAYAA0AAAAAAAMAAAAYAA4AAAAAAAMAAAAYAA8AAAAAAAMAAAAYABAAAAAAAAMAAAAYABEAAAAAAAMAAAAZAPr/AAAAAAMAAAAZAPv/AAAAAAMAAAAZAPz/AAAAAAMAAAAZAP3/AAAAAAMAAAAZAP7/AAAAAAMAAAAZAP//AAAAAAMAAAAZAAAAAAAAAAMAAAAZAAEAAAAAAAMAAAAZAAIAAAAAAAMAAAAZAAMAAAAAAAMAAAAZAAQAAAACAAEAAAAZAAUAAAACAAEAAAAZAAYAAAAAAAMAAAAZAAcAAAAAAAMAAAAZAAgAAAAAAAMAAAAZAAkAAAAAAAMAAAAZAAoAAAAAAAMAAAAZAAsAAAAAAAMAAAAZAAwAAAAAAAMAAAAZAA0AAAAAAAMAAAAZAA4AAAAAAAMAAAAZAA8AAAAAAAMAAAAZABAAAAAAAAMAAAAZABEAAAAAAAMAAAAaAPr/AAAAAAMAAAAaAPv/AAAAAAMAAAAaAPz/AAAAAAMAAAAaAP3/AAAAAAMAAAAaAP7/AAAAAAMAAAAaAP//AAAAAAMAAAAaAAAAAAAAAAMAAAAaAAEAAAAAAAMAAAAaAAIAAAAAAAMAAAAaAAMAAAAAAAMAAAAaAAQAAAACAAEAAAAaAAUAAAACAAEAAAAaAAYAAAAAAAMAAAAaAAcAAAAAAAMAAAAaAAgAAAAAAAMAAAAaAAkAAAAAAAMAAAAaAAoAAAAAAAMAAAAaAAsAAAAAAAMAAAAaAAwAAAAAAAMAAAAaAA0AAAAAAAMAAAAaAA4AAAAAAAMAAAAaAA8AAAAAAAMAAAAaABAAAAAAAAMAAAAaABEAAAAAAAMAAAAbAPr/AAAAAAMAAAAbAPv/AAAAAAMAAAAbAPz/AAAAAAMAAAAbAP3/AAAAAAMAAAAbAP7/AAAAAAMAAAAbAP//AAAAAAMAAAAbAAAAAAAAAAMAAAAbAAEAAAAAAAMAAAAbAAIAAAAAAAMAAAAbAAMAAAAAAAMAAAAbAAQAAAAAAAMAAAAbAAUAAAAAAAMAAAAbAAYAAAAAAAMAAAAbAAcAAAAAAAMAAAAbAAgAAAAAAAMAAAAbAAkAAAAAAAMAAAAbAAoAAAAAAAMAAAAbAAsAAAAAAAMAAAAbAAwAAAAAAAMAAAAbAA0AAAAAAAMAAAAbAA4AAAAAAAMAAAAbAA8AAAAAAAMAAAAbABAAAAAAAAMAAAAbABEAAAAAAAMAAAD6//n/AAAAAAMAAAD7//n/AAAAAAMAAAD8//n/AAAAAAMAAAD9//n/AAAAAAMAAAD+//n/AAAAAAMAAAD///n/AAAAAAMAAAAAAPn/AAAAAAMAAAABAPn/AAAAAAMAAAACAPn/AAAAAAMAAAADAPn/AAAAAAMAAAAEAPn/AAAAAAMAAAAFAPn/AAAAAAMAAAAGAPn/AAAAAAMAAAAHAPn/AAAAAAMAAAAIAPn/AAAAAAMAAAAJAPn/AAAAAAMAAAAKAPn/AAAAAAMAAAALAPn/AAAAAAMAAAAMAPn/AAAAAAMAAAANAPn/AAAAAAMAAAAOAPn/AAAAAAMAAAAPAPn/AAAAAAMAAAAQAPn/AAAAAAMAAAARAPn/AAAAAAMAAAASAPn/AAAAAAMAAAATAPn/AAAAAAMAAAAUAPn/AAAAAAMAAAAVAPn/AAAAAAMAAAAWAPn/AAAAAAMAAAAXAPn/AAAAAAMAAAAYAPn/AAAAAAMAAAAZAPn/AAAAAAMAAAAaAPn/AAAAAAMAAAAbAPn/AAAAAAMAAAA=")
tile_set = SubResource("TileSet_lnu2h")
navigation_enabled = false

[node name="DynamicObstacleRegion" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_p57ef")

[node name="DebugNavArea" type="Polygon2D" parent="DynamicObstacleRegion"]

[node name="DebugObstacle" type="Polygon2D" parent="DynamicObstacleRegion"]

[node name="MultiplayerHUD" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 384.0
offset_top = 2.0
offset_right = 787.0
offset_bottom = 127.0

[node name="Panel" type="Panel" parent="MultiplayerHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerHUD/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HostGame" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Host new game"

[node name="JoinAsPlayer" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_yqjtg")
theme_override_font_sizes/font_size = 32
text = "Join as Player"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player_scene.tscn")
spawn_path = NodePath("../Players")

[node name="Players" type="Node2D" parent="."]
z_index = 2
y_sort_enabled = true

[node name="EnemiesSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/enemy_scene.tscn")
spawn_path = NodePath("../Enemies")

[node name="Enemies" type="Node2D" parent="."]
z_index = 2
z_as_relative = false
y_sort_enabled = true

[node name="Moomoo" type="StaticBody2D" parent="."]
z_index = 2
position = Vector2(553, 344)
script = ExtResource("4_iywne")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Moomoo"]
radius = 32.0

[node name="Polygon2D" type="Polygon2D" parent="Moomoo/NavigationAgent2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moomoo"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_iywne")

[node name="Sprite2D" type="Sprite2D" parent="Moomoo"]
position = Vector2(6, -39)
scale = Vector2(0.9375, 0.9375)
texture = ExtResource("4_lbhrr")

[connection signal="pressed" from="MultiplayerHUD/Panel/VBoxContainer/HostGame" to="GameManager" method="_on_host_game_pressed"]
[connection signal="pressed" from="MultiplayerHUD/Panel/VBoxContainer/JoinAsPlayer" to="GameManager" method="_on_join_as_player_pressed"]
